prevent margin collapse

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -525,6 +525,7 @@ span.dir{
 }
 #genomes_table.willDrop{
     background-color: #dff0d8;
+    cursor: copy;
 }
 #genomes_table tbody tr:not(.ui-sortable-helper){
     cursor: url(/openhand.cur) 7 5, pointer;
